apps/pacman/base/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mongodb
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongodb
  template:
    metadata:
      labels:
        name: mongodb
        app: mongodb
#    serviceAccountName: pacman-sa
    spec:
#      securityContext:
#        fsGroup: 1001
#        runAsUser: 1001
      containers:
      - image: docker.io/bitnamilegacy/mongodb:5.0.24-debian-11-r20
        name: mongodb
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - name: mongodb
          containerPort: 27017
        volumeMounts:
          - name: mongo-db
            mountPath: /bitnami/mongodb/data/db
      volumes:
        - name: mongo-db
          persistentVolumeClaim:
            claimName: mongo-storage
