apps/pacman/base/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman
  name: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pacman
  template:
    metadata:
      labels:
        name: pacman
#    serviceAccountName: pacman-sa
    spec:
      containers:
      - image: quay.io/jpacker/nodejs-pacman-app:latest
        name: pacman
        ports:
        - containerPort: 8080
          name: http-server
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
