apps/pacman/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongodb
  name: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongodb
