apps/pacman/base/mongodb-service.yaml
---
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  labels:
    name: mongo
  name: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
---
