apps/pacman/base/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
  labels:
    app.kubernetes.io/name: pacman
spec:
  path: "/"
  to:
    kind: Service
    name: pacman
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
